# internal/handler/http/hire.go
@@ -2,7 +2,7 @@ package http
 
 import (
 	"errors"
-	"exchanger/internal/domain/customer"
+	"exchanger/internal/domain/hire"
 	"exchanger/internal/service/hiring"
 	"exchanger/pkg/market"
 	"exchanger/pkg/server/response"
@@ -11,15 +11,15 @@ import (
 	"net/http"
 )
 
-type CustomerHandler struct {
+type HireHandler struct {
 	hiringService *hiring.Service
 }
 
-func NewCustomerHandler(s *hiring.Service) *CustomerHandler {
-	return &CustomerHandler{hiringService: s}
+func NewHireHandler(s *hiring.Service) *HireHandler {
+	return &HireHandler{hiringService: s}
 }
 
-func (h *CustomerHandler) Routes() chi.Router {
+func (h *HireHandler) Routes() chi.Router {
 	r := chi.NewRouter()
 
 	r.Get("/", h.list)
@@ -34,15 +34,15 @@ func (h *CustomerHandler) Routes() chi.Router {
 	return r
 }
 
-// @Summary	list of customers from the repository
-// @Tags		customers
+// @Summary	list of hires from the repository
+// @Tags		hires
 // @Accept		json
 // @Produce	json
-// @Success	200			{array}		customer.Response
+// @Success	200			{array}		hire.Response
 // @Failure	500			{object}	response.Object
-// @Router		/customers 	[get]
-func (h *CustomerHandler) list(w http.ResponseWriter, r *http.Request) {
-	res, err := h.hiringService.ListCustomers(r.Context())
+// @Router		/hires 	[get]
+func (h *HireHandler) list(w http.ResponseWriter, r *http.Request) {
+	res, err := h.hiringService.ListHires(r.Context())
 	if err != nil {
 		response.InternalServerError(w, r, err)
 		return
@@ -51,23 +51,23 @@ func (h *CustomerHandler) list(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, res)
 }
 
-// @Summary	add a new customer to the repository
-// @Tags		customers
+// @Summary	add a new hire to the repository
+// @Tags		hires
 // @Accept		json
 // @Produce	json
-// @Param		request	body		customer.Request	true	"body param"
-// @Success	200		{object}	customer.Response
+// @Param		request	body		hire.Request	true	"body param"
+// @Success	200		{object}	hire.Response
 // @Failure	400		{object}	response.Object
 // @Failure	500		{object}	response.Object
-// @Router		/customers [post]
-func (h *CustomerHandler) add(w http.ResponseWriter, r *http.Request) {
-	req := customer.Request{}
+// @Router		/hires [post]
+func (h *HireHandler) add(w http.ResponseWriter, r *http.Request) {
+	req := hire.Request{}
 	if err := render.Bind(r, &req); err != nil {
 		response.BadRequest(w, r, err, req)
 		return
 	}
 
-	res, err := h.hiringService.AddCustomer(r.Context(), req)
+	res, err := h.hiringService.AddHire(r.Context(), req)
 	if err != nil {
 		response.InternalServerError(w, r, err)
 		return
@@ -75,19 +75,19 @@ func (h *CustomerHandler) add(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, res)
 }
 
-// @Summary	get the customer from the repository
-// @Tags		customers
+// @Summary	get the hire from the repository
+// @Tags		hires
 // @Accept		json
 // @Produce	json
 // @Param		id	path		int	true	"path param"
-// @Success	200	{object}	customer.Response
+// @Success	200	{object}	hire.Response
 // @Failure	404	{object}	response.Object
 // @Failure	500	{object}	response.Object
-// @Router		/customers/{id} [get]
-func (h *CustomerHandler) get(w http.ResponseWriter, r *http.Request) {
+// @Router		/hires/{id} [get]
+func (h *HireHandler) get(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
-	res, err := h.hiringService.GetCustomer(r.Context(), id)
+	res, err := h.hiringService.GetHire(r.Context(), id)
 	if err != nil {
 		switch {
 		case errors.Is(err, market.ErrorNotFound):
@@ -101,27 +101,27 @@ func (h *CustomerHandler) get(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, res)
 }
 
-// @Summary	update the customer in the repository
-// @Tags		customers
+// @Summary	update the hire in the repository
+// @Tags		hires
 // @Accept		json
 // @Produce	json
 // @Param		id		path	int				true	"path param"
-// @Param		request	body	customer.Request	true	"body param"
+// @Param		request	body	hire.Request	true	"body param"
 // @Success	200
 // @Failure	400	{object}	response.Object
 // @Failure	404	{object}	response.Object
 // @Failure	500	{object}	response.Object
-// @Router		/customers/{id} [put]
-func (h *CustomerHandler) update(w http.ResponseWriter, r *http.Request) {
+// @Router		/hires/{id} [put]
+func (h *HireHandler) update(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
-	req := customer.Request{}
+	req := hire.Request{}
 	if err := render.Bind(r, &req); err != nil {
 		response.BadRequest(w, r, err, req)
 		return
 	}
 
-	if err := h.hiringService.UpdateCustomer(r.Context(), id, req); err != nil {
+	if err := h.hiringService.UpdateHire(r.Context(), id, req); err != nil {
 		switch {
 		case errors.Is(err, market.ErrorNotFound):
 			response.NotFound(w, r, err)
@@ -132,19 +132,19 @@ func (h *CustomerHandler) update(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// @Summary	delete the customer from the repository
-// @Tags		customers
+// @Summary	delete the hire from the repository
+// @Tags		hires
 // @Accept		json
 // @Produce	json
 // @Param		id	path	int	true	"path param"
 // @Success	200
 // @Failure	404	{object}	response.Object
 // @Failure	500	{object}	response.Object
-// @Router		/customers/{id} [delete]
-func (h *CustomerHandler) delete(w http.ResponseWriter, r *http.Request) {
+// @Router		/hires/{id} [delete]
+func (h *HireHandler) delete(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
-	if err := h.hiringService.DeleteCustomer(r.Context(), id); err != nil {
+	if err := h.hiringService.DeleteHire(r.Context(), id); err != nil {
 		switch {
 		case errors.Is(err, market.ErrorNotFound):
 			response.NotFound(w, r, err)
